# drf-api-deploy

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
blog/: urls.py  views.py
blog/migrations/: 0001_initial.py
blog_api/: .env  asgi.py  settings.py  wsgi.py
